--- a/web content/stylesheet.css
+++ b/web content/stylesheet.css
@@ -1,3 +1,7 @@
 h1 {
-    color: rgb(223, 126, 223);
+    color: rgb(34, 54, 235);
 }
+p.one {
+    border-style: solid;
+    border-color: rgb(16, 135, 175);
+  }
